--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 		<module>nutz-integration-struts2</module>
 		<module>nutz-integration-zbus</module>
 		<module>nutz-integration-hessian</module>
+		<module>nutz-plugins-jsonrpc</module>
 	</modules>
 	<properties>
 		<nutz.version>1.r.55-SNAPSHOT</nutz.version>
