--- a/nutz-plugins-daocache/pom.xml
+++ b/nutz-plugins-daocache/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.nutz</groupId>
 		<artifactId>nutzmore</artifactId>
-		<version>1.r.56</version>
+		<version>1.r.57-SNAPSHOT</version>
 	</parent>
 	<artifactId>nutz-plugins-daocache</artifactId>
 	<description>Nutz Dao Cache</description>
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
-			<version>1.0.18</version>
+			<version>1.0.19</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
