--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
 				<configuration>
 					<forkMode>once</forkMode>
 					<argLine>-Dfile.encoding=UTF-8</argLine>
@@ -74,6 +75,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.3</version>
 				<configuration>
 					<additionalparam>-Xdoclint:none</additionalparam>
 				</configuration>
@@ -103,6 +105,7 @@
 		<module>nutz-integration-zbus</module>
 		<module>nutz-integration-hessian</module>
 		<module>nutz-plugins-jsonrpc</module>
+		<module>nutz-plugins-webqq</module>
 	</modules>
 	<properties>
 		<nutz.version>1.r.56</nutz.version>
