--- a/nutz-plugins-webqq/pom.xml
+++ b/nutz-plugins-webqq/pom.xml
@@ -7,4 +7,11 @@
   </parent>
   <artifactId>nutz-plugins-webqq</artifactId>
   <build/>
+  <dependencies>
+  	<dependency>
+            <groupId>net.dongliu</groupId>
+            <artifactId>requests</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+  </dependencies>
 </project>
