--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,7 @@
 		<module>nutz-plugins-jsonrpc</module>
 		<module>nutz-plugins-webqq</module>
 		<module>nutz-plugins-sigar</module>
+		<module>nutz-plugins-jedis</module>
 	</modules>
 	<properties>
 		<nutz.version>1.r.56</nutz.version>
