--- a/nutz-integration-dubbo/pom.xml
+++ b/nutz-integration-dubbo/pom.xml
@@ -59,6 +59,18 @@
 			</exclusion>
 		</exclusions>
 	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.12</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+		<optional>true</optional>
+	</dependency>
 	</dependencies>
 
 	<build>
