--- a/pom.xml
+++ b/pom.xml
@@ -110,8 +110,8 @@
 		<module>nutz-plugins-jedis</module>
 		<module>nutz-integration-dubbo</module>
 		<module>nutz-plugins-sfntly</module>
-		
 		<module>nutz-plugins-mock</module>
+		<module>nutz-plugins-qrcode</module>
 	</modules>
 	<properties>
 		<nutz.version>1.r.57.r3</nutz.version>
