--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
 		<module>nutz-plugins-mock</module>
 		<module>nutz-plugins-qrcode</module>
         <module>nutz-plugins-wxrobot</module>
+        <module>nutz-plugins-nop</module>
 	</modules>
 	<properties>
 		<nutz.version>1.r.57.r3</nutz.version>
