--- a/nutz-plugins-sigar/pom.xml
+++ b/nutz-plugins-sigar/pom.xml
@@ -20,5 +20,10 @@
   		<version>3.1.0</version>
   		<scope>provided</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
   </dependencies>
 </project>
