--- a/nutz-integration-jedis/pom.xml
+++ b/nutz-integration-jedis/pom.xml
@@ -57,6 +57,13 @@
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>2.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>4.3.5.RELEASE</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
