--- a/nutz-plugins-cache/pom.xml
+++ b/nutz-plugins-cache/pom.xml
@@ -16,11 +16,19 @@
   		<groupId>net.sf.ehcache</groupId>
   		<artifactId>ehcache</artifactId>
   		<version>2.10.2.2.21</version>
+  		<scope>provided</scope>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.shiro</groupId>
-  		<artifactId>shiro-all</artifactId>
+  		<artifactId>shiro-ehcache</artifactId>
   		<version>1.3.2</version>
+  		<scope>provided</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>redis.clients</groupId>
+  		<artifactId>jedis</artifactId>
+  		<version>2.9.0</version>
+  		<scope>provided</scope>
   	</dependency>
   </dependencies>
 </project>
