--- a/nutz-integration-rsf/pom.xml
+++ b/nutz-integration-rsf/pom.xml
@@ -44,6 +44,14 @@
     </properties>
 
     <dependencies>
+        <!-- Hasor -->
+        <dependency>
+            <groupId>net.hasor</groupId>
+            <artifactId>hasor-core</artifactId>
+            <version>3.1.3-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <!-- RSF -->
         <dependency>
             <groupId>net.hasor</groupId>
             <artifactId>hasor-rsf</artifactId>
@@ -57,20 +65,17 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>2.5.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                    </compilerArgs>
-                    <useIncrementalCompilation>false</useIncrementalCompilation>
+                    <encoding>UTF8</encoding>
                 </configuration>
             </plugin>
             <plugin>
