--- a/nutz-integration-rsf/pom.xml
+++ b/nutz-integration-rsf/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>net.hasor</groupId>
             <artifactId>hasor-rsf</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -102,7 +102,6 @@
             <name>NutzCN snapshot repository</name>
             <url>https://jfrog.nutz.cn/artifactory/snapshots</url>
         </snapshotRepository>
-
         <repository>
             <id>sonatype-release-staging</id>
             <name>Sonatype Nexus release repository</name>
