--- a/nutz-integration-rsf/pom.xml
+++ b/nutz-integration-rsf/pom.xml
@@ -5,9 +5,9 @@
         <artifactId>nutzmore</artifactId>
         <version>1.r.61-SNAPSHOT</version>
     </parent>
-    <artifactId>nutz-integration-rsf</artifactId>
-    <name>nutz-integration-rsf</name>
-    <description>Nutz and Rsf</description>
+    <artifactId>nutz-integration-hasor</artifactId>
+    <name>nutz-integration-hasor</name>
+    <description>Nutz and Hasor</description>
 
     <url>https://nutzam.com</url>
     <issueManagement>
@@ -49,7 +49,6 @@
             <groupId>net.hasor</groupId>
             <artifactId>hasor-core</artifactId>
             <version>3.1.3-SNAPSHOT</version>
-            <scope>provided</scope>
         </dependency>
         <!-- RSF -->
         <dependency>
