--- a/nutz-integration-hasor/demo/pom.xml
+++ b/nutz-integration-hasor/demo/pom.xml
@@ -1,11 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.nutz</groupId>
-        <artifactId>nutz-integration-hasor</artifactId>
-        <version>1.r.61-SNAPSHOT</version>
-    </parent>
 
     <!-- Maven Info -->
     <groupId>net.hasor</groupId>
@@ -44,6 +39,13 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+		<repository>
+			<id>nutzcn-snapshots</id>
+			<url>https://jfrog.nutz.cn/artifactory/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
     </repositories>
 
     <dependencies>
@@ -67,7 +69,7 @@
             <dependency>
                 <groupId>net.hasor</groupId>
                 <artifactId>hasor-core</artifactId>
-                <version>3.1.2</version>
+                <version>3.1.3-SNAPSHOT</version>
             </dependency>
             <!-- RSF -->
             <dependency>
