--- a/nutz-integration-hasor/pom.xml
+++ b/nutz-integration-hasor/pom.xml
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>net.hasor</groupId>
 			<artifactId>hasor-core</artifactId>
-			<version>3.1.3-SNAPSHOT</version>
+			<version>3.1.2</version><!-- 实际使用请依赖 3.1.3 及以上版本 -->
 			<scope>provided</scope>
 		</dependency>
 		<!-- RSF -->
