--- a/nutz-integration-json4excel/pom.xml
+++ b/nutz-integration-json4excel/pom.xml
@@ -37,7 +37,7 @@
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<poi.version>3.14</poi.version>
+		<poi.version>3.15</poi.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -62,6 +62,16 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>${poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>${poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>ooxml-schemas</artifactId>
+			<version>1.3</version>
 		</dependency>
 	</dependencies>
 	<build>
