--- a/nutz-plugins-ngrok/pom.xml
+++ b/nutz-plugins-ngrok/pom.xml
@@ -37,6 +37,16 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
+	<dependency>
+		<groupId>redis.clients</groupId>
+		<artifactId>jedis</artifactId>
+		<version>2.9.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.nutz</groupId>
+		<artifactId>nutz-integration-jedis</artifactId>
+		<version>1.r.61-SNAPSHOT</version>
+	</dependency>
 	</dependencies>
 	<build>
 		<plugins>
