--- a/nutz-plugins-websocket/pom.xml
+++ b/nutz-plugins-websocket/pom.xml
@@ -110,5 +110,17 @@
   		<version>1.1</version>
   		<scope>provided</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.nutz</groupId>
+  		<artifactId>nutz-integration-jedis</artifactId>
+  		<version>1.r.61-SNAPSHOT</version>
+  		<scope>provided</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>redis.clients</groupId>
+  		<artifactId>jedis</artifactId>
+  		<version>2.9.0</version>
+  		<scope>provided</scope>
+  	</dependency>
   </dependencies>
 </project>
