--- a/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
+++ b/nutz-plugins-spring-boot-starter/demo/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
         username: root
         password: 123456
         # 使用druid数据源
-        type: com.alibaba.druid.pool.DruidDataSource
+        type: org.nutz.dao.impl.SimpleDataSource
         #driver-class-name: org.h2.Driver
         driver-class-name: com.mysql.jdbc.Driver
         filters: stat,wall,log4j
@@ -23,13 +23,13 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
-    jackson:
-        date-format: yyyy-MM-dd HH:mm:ss
+   # jackson: #已使用nutzjson替代
+    #    date-format: yyyy-MM-dd HH:mm:ss Z
+     #   time-zone: GMT+8     #此处有巨坑 jackson就是要按照utc时间来给你序列化咋滴!!  
 logging:
   level:
     org.nutz: debug   
     demo: debug
-       
 nutz:
     dao:
         runtime:
@@ -44,3 +44,8 @@ nutz:
           paths:
             - sqls
             - other
+    json:
+        auto-unicode: true
+        mode: compact
+        quote-name: false
+        date-format: yyyy-MM-dd HH:mm:ss Z
