--- a/nutz-plugins-websocket/pom.xml
+++ b/nutz-plugins-websocket/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.nutz</groupId>
     <artifactId>nutzmore</artifactId>
-    <version>1.r.61.r2</version>
+    <version>1.r.62-SNAPSHOT</version>
   </parent>
   <artifactId>nutz-plugins-websocket</artifactId>
 	<url>https://nutzam.com</url>
@@ -113,7 +113,7 @@
   	<dependency>
   		<groupId>org.nutz</groupId>
   		<artifactId>nutz-integration-jedis</artifactId>
-  		<version>1.r.61.r2</version>
+  		<version>1.r.62-SNAPSHOT</version>
   		<scope>provided</scope>
   	</dependency>
   	<dependency>
