--- a/nutz-plugins-spring-boot-starter/pom.xml
+++ b/nutz-plugins-spring-boot-starter/pom.xml
@@ -126,6 +126,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 				<version>${spring-boot.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>com.fasterxml.jackson.core</groupId>
+						<artifactId>jackson-databind</artifactId>
+					</exclusion>
+				</exclusions>
 		</dependency>
 	</dependencies>
 </project>
